tests/snapshots/parser__function_call_with_addition.snap
---
source: tests/parser.rs
expression: statements
---
[
    Function(
        Function {
            name: "test",
            parameters: [],
            body: Block {
                body: [
                    Let {
                        name: "x",
                        value: Infix {
                            op: Plus,
                            lhs: FunctionCall {
                                name: "test2",
                                args: [],
                            },
                            rhs: Literal(
                                Integer(
                                    1,
                                ),
                            ),
                        },
                        is_mutable: false,
                        type_name: None,
                    },
                ],
            },
            return_type_name: None,
        },
    ),
    Function(
        Function {
            name: "test2",
            parameters: [],
            body: Block {
                body: [],
            },
            return_type_name: None,
        },
    ),
]
